--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>prpgramminh herooooo here!!</h1>
-    <p>i am tryinh hard</p>
+    <p>i am trying more hard</p>
     
 </body>
 </html>
