--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>prpgramminh herooooo here!!</h1>
     <p>i am trying more hard</p>
+    <img src="baby.jpg">
     
 </body>
 </html>
